testing the model

--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "((29126467, 3), (7281617, 3), (29126467, 4), (7281617, 4))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +179,8 @@
     "\n",
     "#Building Model Dict\n",
     "Models = {                         \n",
-    "    # \"Decision Tree\": DecisionTreeClassifier(),      \n",
-    "    \"KNearest\": KNeighborsClassifier(n_jobs=-1),           \n",
+    "    \"Decision Tree\": DecisionTreeClassifier(),      \n",
+    "    # \"KNearest\": KNeighborsClassifier(n_jobs=-1),           \n",
     "    # \"Ridge\" : RidgeClassifier(),              #poor result    \n",
     "    # \"MLP\" : MLPClassifier(),                  #poor result              \n",
     "    # \"R_Neighour\" : RadiusNeighborsClassifier(),\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -296,14 +296,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. KNearest\n",
+      "1. Decision Tree\n",
+      "Classifiers:  DecisionTreeClassifier Has a training score of 89.4 % accuracy score\n",
       "Classification report\n",
       "--------------------- \n",
       "\n"
@@ -324,22 +325,24 @@
       "                 precision    recall  f1-score   support\n",
       "\n",
       "StartHesitation       1.00      1.00      1.00   1822100\n",
-      "           Turn       0.84      0.93      0.89   1819501\n",
-      "        Walking       0.89      0.98      0.93   1819885\n",
-      "       All_zero       0.94      0.74      0.83   1820131\n",
+      "           Turn       0.86      0.88      0.87   1819501\n",
+      "        Walking       0.92      0.94      0.93   1819885\n",
+      "       All_zero       0.86      0.81      0.83   1820131\n",
       "\n",
-      "      micro avg       0.92      0.91      0.91   7281617\n",
-      "      macro avg       0.92      0.91      0.91   7281617\n",
-      "   weighted avg       0.92      0.91      0.91   7281617\n",
+      "      micro avg       0.91      0.91      0.91   7281617\n",
+      "      macro avg       0.91      0.91      0.91   7281617\n",
+      "   weighted avg       0.91      0.91      0.91   7281617\n",
       "    samples avg       0.91      0.91      0.91   7281617\n",
       " \n",
       "\n",
       "Accuracy Measures\n",
       "--------------------- \n",
       "\n",
-      "Base score:  0.9114667799748325\n",
-      "Accuracy:  0.9114667799748325\n",
-      "Avarge Precision:  0.85981436472155\n"
+      "Base score:  0.9089180329039552\n",
+      "Accuracy:  0.9089180329039552\n",
+      "Avarge Precision:  0.8522690981167873\n",
+      "Because f1 socre is not quality. The model is skip to saving phase.\n",
+      "________________________________________\n"
      ]
     }
    ],
@@ -352,10 +355,13 @@
     "    \n",
     "    with mlflow.start_run():\n",
     "        # fit the model\n",
-    "        classifier.fit(train_feature, train_label)\n",
-    "        # cross_val_scores = cross_val_score(classifier, train_feature, train_label, cv=5)\n",
-    "        # round_scores = round(cross_val_scores.mean(), 4) * 100\n",
-    "        # print(\"Classifiers: \", classifier.__class__.__name__, \"Has a training score of\", round_scores , \"% accuracy score\")\n",
+    "        from joblib import parallel_backend\n",
+    "\n",
+    "        with parallel_backend('threading', n_jobs=-1):\n",
+    "            classifier.fit(train_feature, train_label)\n",
+    "        cross_val_scores = cross_val_score(classifier, train_feature, train_label, cv=3)\n",
+    "        round_scores = round(cross_val_scores.mean(), 4) * 100\n",
+    "        print(\"Classifiers: \", classifier.__class__.__name__, \"Has a training score of\", round_scores , \"% accuracy score\")\n",
     "\n",
     "        \n",
     "        counter = counter + 1\n",
@@ -369,8 +375,7 @@
     "        mlflow.log_metric(\"base_score\"     , base_score)\n",
     "        mlflow.log_metric(\"accuracy\"       , accuracy)\n",
     "        mlflow.log_metric(\"av_precision\"   , av_precision)\n",
-    "        # mlflow.log_metric(\"cross_val_score\", cross_val_scores)\n",
-    "        # mlflow.log_metric(\"round_score\", round_scores)\n",
+    "        mlflow.log_metric(\"round_score\", round_scores)\n",
     "        \n",
     "        signature = infer_signature(valid_feature, classifier.predict(valid_feature))\n",
     "        if av_precision > 0.95 :\n",
@@ -384,19 +389,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "params = {\n",
+    "    \"Decision Tree\": {\"criterion\": [\"gini\", \"entropy\"], \"max_depth\": list(range(2,4,1)), \n",
+    "              \"min_samples_leaf\": list(range(5,7,1))},\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Using Grid search for finding the most optimal hyperparameters\n",
+    "def gridsearch(classifier, params):\n",
+    "    grid_classifier = GridSearchCV(classifier, params)\n",
+    "    grid_classifier.fit(train_feature, train_label)\n",
+    "    best_classifier = grid_classifier.best_estimator_\n",
+    "    return best_classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores after applying GridSearch:-\n",
+      "Decision Tree: 89.396\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Cross-Validation Scores after applying GridSearch:-')\n",
+    "for key, classifier in Models.items():\n",
+    "    best_classifier = gridsearch(classifier,params[key])\n",
+    "    cv_score = cross_val_score(classifier, train_feature, train_label, cv=3)\n",
+    "    print('{}: {}'.format(key,round(cv_score.mean()*100.0, 4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier(max_depth=3, min_samples_leaf=5)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(max_depth=3, min_samples_leaf=5)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "DecisionTreeClassifier(max_depth=3, min_samples_leaf=5)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_feature = np.load('Data/defog/test_feature.npy')\n",
+    "test_label = np.load('Data/defog/test_label.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification report\n",
+      "--------------------- \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       0.58      0.44      0.50   2276249\n",
+      "           Turn       0.54      0.37      0.44   2273938\n",
+      "        Walking       0.00      0.00      0.00   2274579\n",
+      "       All_zero       0.78      0.29      0.42   2277255\n",
+      "\n",
+      "      micro avg       0.61      0.27      0.38   9102021\n",
+      "      macro avg       0.48      0.27      0.34   9102021\n",
+      "   weighted avg       0.48      0.27      0.34   9102021\n",
+      "    samples avg       0.27      0.27      0.27   9102021\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.27320734592899754\n",
+      "Accuracy:  0.27320734592899754\n",
+      "Avarge Precision:  0.3509588775975744\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_score,accuracy,av_precision = eval_metrics(best_classifier,\n",
+    "                                                test_feature,\n",
+    "                                                test_label)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DecisionTreeClassifier()\n",
+      "Classification report\n",
+      "--------------------- \n",
+      "\n",
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       1.00      0.93      0.96   2276249\n",
+      "           Turn       0.81      0.86      0.83   2273938\n",
+      "        Walking       0.89      0.93      0.91   2274579\n",
+      "       All_zero       0.80      0.77      0.78   2277255\n",
+      "\n",
+      "      micro avg       0.87      0.87      0.87   9102021\n",
+      "      macro avg       0.87      0.87      0.87   9102021\n",
+      "   weighted avg       0.87      0.87      0.87   9102021\n",
+      "    samples avg       0.87      0.87      0.87   9102021\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.8708291268499601\n",
+      "Accuracy:  0.8708291268499601\n",
+      "Avarge Precision:  0.7969772649830308\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for Model_Name, classifier in Models.items(): \n",
+    "    print(classifier)\n",
+    "    base_score,accuracy,av_precision = eval_metrics(classifier=classifier,\n",
+    "                                                    test_features=test_feature,\n",
+    "                                                    test_labels= test_label)  \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
