testing the dataset and models

--- a/DNN.ipynb
+++ b/DNN.ipynb
@@ -538,6 +538,7 @@
     "    #                              test_labels = test_label)\n",
     "    \n",
     "    mlflow.log_param(\"Model\"           , Model_Name)\n",
+    "    mlflow.log_param(\"Dataset\" , \"Defog\")\n",
     "    # mlflow.log_params(model_results)\n",
     "    mlflow.tensorflow.autolog()\n",
     "    \n",
