--- a/Model_Test_tdcsfog.ipynb
+++ b/Model_Test_tdcsfog.ipynb
@@ -497,7 +497,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNeighborsClassifier(n_jobs=-1)\n"
+      "KNeighborsClassifier(n_jobs=-1)\n",
+      "Classification report\n",
+      "--------------------- \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/.local/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       0.80      0.87      0.83    973828\n",
+      "           Turn       0.71      0.65      0.68    973227\n",
+      "        Walking       0.81      0.88      0.84    973253\n",
+      "       All_zero       0.80      0.54      0.65    971768\n",
+      "\n",
+      "      micro avg       0.78      0.74      0.76   3892076\n",
+      "      macro avg       0.78      0.74      0.75   3892076\n",
+      "   weighted avg       0.78      0.74      0.75   3892076\n",
+      "    samples avg       0.74      0.74      0.74   3892076\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.7369912612189484\n",
+      "Accuracy:  0.7369912612189484\n",
+      "Avarge Precision:  0.6422217471842908\n",
+      "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric=None, feature_types=None,\n",
+      "              gamma=None, gpu_id=0, grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=None, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
+      "              predictor=None, random_state=None, ...)\n",
+      "Classification report\n",
+      "--------------------- \n",
+      "\n",
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       0.61      0.13      0.21    973828\n",
+      "           Turn       0.66      0.12      0.20    973227\n",
+      "        Walking       0.59      0.20      0.30    973253\n",
+      "       All_zero       0.75      0.42      0.54    971768\n",
+      "\n",
+      "      micro avg       0.67      0.22      0.33   3892076\n",
+      "      macro avg       0.65      0.22      0.31   3892076\n",
+      "   weighted avg       0.65      0.22      0.31   3892076\n",
+      "    samples avg       0.22      0.22      0.22   3892076\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.2157064764408506\n",
+      "Accuracy:  0.2157064764408506\n",
+      "Avarge Precision:  0.3425824317761779\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/.local/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
