--- a/DNN.ipynb
+++ b/DNN.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-09 09:00:11.385106: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-09 11:05:28.317607: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE3 SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -111,17 +111,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-09 09:00:16.659897: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:16.857461: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:16.857640: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:16.863109: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:16.863455: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:16.863587: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:18.463770: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:18.464444: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:18.464594: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-05-09 09:00:18.464712: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 9907 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:0a:00.0, compute capability: 8.6\n",
-      "2023-05-09 09:00:18.465697: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
+      "2023-05-09 11:05:30.378672: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.400104: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.400345: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.403272: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.403466: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.403599: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.981430: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.981611: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.981750: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-05-09 11:05:30.981863: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 9498 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:0a:00.0, compute capability: 8.6\n",
+      "2023-05-09 11:05:30.982329: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -416,29 +416,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-09 09:01:53.914102: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [29126467,4]\n",
+      "2023-05-09 11:05:34.035338: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [29126467,4]\n",
       "\t [[{{node Placeholder/_1}}]]\n",
-      "2023-05-09 09:01:56.245449: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:637] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
-      "2023-05-09 09:01:56.273013: I tensorflow/compiler/xla/service/service.cc:169] XLA service 0x55cf86aec0d0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "2023-05-09 09:01:56.273040: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n",
-      "2023-05-09 09:01:56.321769: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
-      "2023-05-09 09:01:56.871025: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:424] Loaded cuDNN version 8800\n",
-      "2023-05-09 09:01:57.030463: I tensorflow/tsl/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2023-05-09 09:01:57.146467: I ./tensorflow/compiler/jit/device_compiler.h:180] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+      "2023-05-09 11:05:35.607738: I tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:637] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-05-09 11:05:35.609677: I tensorflow/compiler/xla/service/service.cc:169] XLA service 0x55bbded99c10 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-05-09 11:05:35.609706: I tensorflow/compiler/xla/service/service.cc:177]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n",
+      "2023-05-09 11:05:35.614828: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2023-05-09 11:05:36.027835: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:424] Loaded cuDNN version 8800\n",
+      "2023-05-09 11:05:36.085848: I tensorflow/tsl/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2023-05-09 11:05:36.140280: I ./tensorflow/compiler/jit/device_compiler.h:180] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14217/14222 [============================>.] - ETA: 0s - loss: 0.8057 - accuracy: 0.6687"
+      "14216/14222 [============================>.] - ETA: 0s - loss: 0.8156 - accuracy: 0.6638"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-09 09:02:37.689640: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [7281617,4]\n",
+      "2023-05-09 11:06:16.579590: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [7281617,4]\n",
       "\t [[{{node Placeholder/_1}}]]\n"
      ]
     },
@@ -446,50 +446,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14222/14222 [==============================] - 54s 3ms/step - loss: 0.8057 - accuracy: 0.6687 - val_loss: 0.7512 - val_accuracy: 0.6909 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 52s 3ms/step - loss: 0.8156 - accuracy: 0.6638 - val_loss: 0.7653 - val_accuracy: 0.6838 - lr: 0.0010\n",
       "Epoch 2/10\n",
-      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7326 - accuracy: 0.6979 - val_loss: 0.7238 - val_accuracy: 0.7007 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7516 - accuracy: 0.6902 - val_loss: 0.7397 - val_accuracy: 0.6947 - lr: 0.0010\n",
       "Epoch 3/10\n",
-      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7168 - accuracy: 0.7034 - val_loss: 0.7143 - val_accuracy: 0.7038 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7351 - accuracy: 0.6968 - val_loss: 0.7282 - val_accuracy: 0.6981 - lr: 0.0010\n",
       "Epoch 4/10\n",
-      "14222/14222 [==============================] - 47s 3ms/step - loss: 0.7091 - accuracy: 0.7060 - val_loss: 0.7086 - val_accuracy: 0.7055 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7248 - accuracy: 0.7003 - val_loss: 0.7222 - val_accuracy: 0.7003 - lr: 0.0010\n",
       "Epoch 5/10\n",
-      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7041 - accuracy: 0.7078 - val_loss: 0.7043 - val_accuracy: 0.7068 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7180 - accuracy: 0.7029 - val_loss: 0.7178 - val_accuracy: 0.7023 - lr: 0.0010\n",
       "Epoch 6/10\n",
-      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7002 - accuracy: 0.7090 - val_loss: 0.7021 - val_accuracy: 0.7076 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7130 - accuracy: 0.7049 - val_loss: 0.7137 - val_accuracy: 0.7044 - lr: 0.0010\n",
       "Epoch 7/10\n",
-      "14222/14222 [==============================] - 47s 3ms/step - loss: 0.6973 - accuracy: 0.7100 - val_loss: 0.6997 - val_accuracy: 0.7085 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7092 - accuracy: 0.7065 - val_loss: 0.7109 - val_accuracy: 0.7054 - lr: 0.0010\n",
       "Epoch 8/10\n",
-      "14222/14222 [==============================] - 47s 3ms/step - loss: 0.6950 - accuracy: 0.7108 - val_loss: 0.6985 - val_accuracy: 0.7090 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7061 - accuracy: 0.7078 - val_loss: 0.7061 - val_accuracy: 0.7070 - lr: 0.0010\n",
       "Epoch 9/10\n",
-      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.6928 - accuracy: 0.7114 - val_loss: 0.6950 - val_accuracy: 0.7101 - lr: 0.0010\n",
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7036 - accuracy: 0.7088 - val_loss: 0.7038 - val_accuracy: 0.7077 - lr: 0.0010\n",
       "Epoch 10/10\n",
-      "14222/14222 [==============================] - 49s 3ms/step - loss: 0.6909 - accuracy: 0.7121 - val_loss: 0.6938 - val_accuracy: 0.7105 - lr: 0.0010\n",
-      "1/1 [==============================] - 0s 85ms/step\n"
+      "14222/14222 [==============================] - 48s 3ms/step - loss: 0.7014 - accuracy: 0.7096 - val_loss: 0.7018 - val_accuracy: 0.7084 - lr: 0.0010\n",
+      "1/1 [==============================] - 0s 80ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-09 09:09:57.800339: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [29126467,4]\n",
+      "2023-05-09 11:13:37.234529: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [29126467,4]\n",
       "\t [[{{node Placeholder/_1}}]]\n",
-      "2023/05/09 09:10:03 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/usr/lib/python3.11/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n"
+      "2023/05/09 11:13:42 WARNING mlflow.utils.autologging_utils: MLflow autologging encountered a warning: \"/usr/lib/python3.11/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The time taken to train the model is 0:08:10.330376\n",
-      "  18/4445 [..............................] - ETA: 13s - loss: 0.7023 - accuracy: 0.7053 "
+      "The time taken to train the model is 0:08:08.815583\n",
+      "   1/4445 [..............................] - ETA: 5:44 - loss: 0.7017 - accuracy: 0.7109"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-09 09:10:03.163073: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [9102021,4]\n",
+      "2023-05-09 11:13:42.322462: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_1' with dtype int64 and shape [9102021,4]\n",
       "\t [[{{node Placeholder/_1}}]]\n"
      ]
     },
@@ -497,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4445/4445 [==============================] - 12s 3ms/step - loss: 0.6932 - accuracy: 0.7108\n",
+      "4445/4445 [==============================] - 12s 3ms/step - loss: 0.7012 - accuracy: 0.7088\n",
       "________________________________________\n"
      ]
     }
