--- a/Model_Test_tdcsfog.ipynb
+++ b/Model_Test_tdcsfog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((12454643, 3), (3113661, 3), (12454643, 4), (3113661, 4))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_feature.shape, valid_feature.shape, train_label.shape, valid_label.shape"
    ]
@@ -154,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,12 +193,12 @@
     "\n",
     "#Building Model Dict\n",
     "Models = {                         \n",
-    "    \"Decision Tree\": DecisionTreeClassifier(),      \n",
-    "    # \"KNearest\": KNeighborsClassifier(n_jobs=-1),           \n",
+    "    # \"Decision Tree\": DecisionTreeClassifier(),      \n",
+    "    \"KNearest\": KNeighborsClassifier(n_jobs=-1),           \n",
     "    # \"Ridge\" : RidgeClassifier(),              #poor result    \n",
     "    # \"MLP\" : MLPClassifier(),                  #poor result              \n",
     "    # \"R_Neighour\" : RadiusNeighborsClassifier(),\n",
-    "    # \"Extra_T\" : ExtraTreesClassifier(),\n",
+    "    # \"Extra_T\" : ExtraTreesClassifier(n_estimators=50),\n",
     "    # \"R_forest\" : RandomForestClassifier(),\n",
     "    # \"XGB\" : xgb.XGBClassifier(),\n",
     "    # \"Catboost\" : CatBoostClassifier()\n",
@@ -197,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,9 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tracking URI: 'http://127.0.0.1:5000'\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow\n",
     "mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")\n",
@@ -291,9 +310,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. KNearest\n",
+      "Classification report\n",
+      "--------------------- \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       0.80      0.87      0.84    777734\n",
+      "           Turn       0.71      0.65      0.68    777913\n",
+      "        Walking       0.81      0.88      0.85    778728\n",
+      "       All_zero       0.80      0.54      0.65    779286\n",
+      "\n",
+      "      micro avg       0.78      0.74      0.76   3113661\n",
+      "      macro avg       0.78      0.74      0.75   3113661\n",
+      "   weighted avg       0.78      0.74      0.75   3113661\n",
+      "    samples avg       0.74      0.74      0.74   3113661\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.7374110412148271\n",
+      "Accuracy:  0.7374110412148271\n",
+      "Avarge Precision:  0.6428025714276315\n",
+      "Because f1 socre is not quality. The model is skip to saving phase.\n",
+      "________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "counter = 1\n",
@@ -307,9 +372,9 @@
     "\n",
     "        with parallel_backend('threading', n_jobs=-1):\n",
     "            classifier.fit(train_feature, train_label)\n",
-    "        cross_val_scores = cross_val_score(classifier, train_feature, train_label, cv=3)\n",
-    "        round_scores = round(cross_val_scores.mean(), 4) * 100\n",
-    "        print(\"Classifiers: \", classifier.__class__.__name__, \"Has a training score of\", round_scores , \"% accuracy score\")\n",
+    "        # cross_val_scores = cross_val_score(classifier, train_feature, train_label, cv=3)\n",
+    "        # round_scores = round(cross_val_scores.mean(), 4) * 100\n",
+    "        # print(\"Classifiers: \", classifier.__class__.__name__, \"Has a training score of\", round_scores , \"% accuracy score\")\n",
     "\n",
     "        \n",
     "        counter = counter + 1\n",
@@ -324,11 +389,11 @@
     "        mlflow.log_metric(\"base_score\"     , base_score)\n",
     "        mlflow.log_metric(\"accuracy\"       , accuracy)\n",
     "        mlflow.log_metric(\"av_precision\"   , av_precision)\n",
-    "        mlflow.log_metric(\"round_score\", round_scores)\n",
+    "        # mlflow.log_metric(\"round_score\", round_scores)\n",
     "        \n",
-    "        signature = infer_signature(valid_feature, classifier.predict(valid_feature))\n",
+    "        # signature = infer_signature(valid_feature, classifier.predict(valid_feature))\n",
     "        if av_precision > 0.95 :\n",
-    "            mlflow.sklearn.log_model(classifier,Model_Name, signature=signature)\n",
+    "            mlflow.sklearn.log_model(classifier,Model_Name)\n",
     "            print(f\"f1 socre is more than 0.945 so the {Model_Name} is saved\")\n",
     "        else :\n",
     "            print(f\"Because f1 socre is not quality. The model is skip to saving phase.\")\n",
@@ -338,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,9 +471,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier(n_jobs=-1)\n",
+      "Classification report\n",
+      "--------------------- \n",
+      "\n",
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "StartHesitation       0.80      0.87      0.83    973828\n",
+      "           Turn       0.71      0.65      0.68    973227\n",
+      "        Walking       0.81      0.88      0.84    973253\n",
+      "       All_zero       0.80      0.54      0.65    971768\n",
+      "\n",
+      "      micro avg       0.78      0.74      0.76   3892076\n",
+      "      macro avg       0.78      0.74      0.75   3892076\n",
+      "   weighted avg       0.78      0.74      0.75   3892076\n",
+      "    samples avg       0.74      0.74      0.74   3892076\n",
+      " \n",
+      "\n",
+      "Accuracy Measures\n",
+      "--------------------- \n",
+      "\n",
+      "Base score:  0.7369912612189484\n",
+      "Accuracy:  0.7369912612189484\n",
+      "Avarge Precision:  0.6422217471842908\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hanlinn/miniconda3/envs/main/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "for Model_Name, classifier in Models.items(): \n",
     "    print(classifier)\n",
@@ -417,6 +520,13 @@
     "                                                    test_labels= test_label)  \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
