--- a/Model_Test.ipynb
+++ b/Model_Test.ipynb
@@ -204,14 +204,14 @@
     "\n",
     "#Building Model Dict\n",
     "Models = {                         \n",
-    "    # \"Decision Tree\": DecisionTreeClassifier(),      \n",
+    "    \"Decision Tree\": DecisionTreeClassifier(),      \n",
     "    \"KNearest\": KNeighborsClassifier(n_jobs=-1),           \n",
     "    # \"Ridge\" : RidgeClassifier(),              #poor result    \n",
     "    # \"MLP\" : MLPClassifier(),                  #poor result              \n",
-    "    # \"R_Neighour\" : RadiusNeighborsClassifier(),\n",
-    "    # \"Extra_T\" : ExtraTreesClassifier(),\n",
-    "    # \"R_forest\" : RandomForestClassifier(),\n",
-    "    # \"XGB\" : xgb.XGBClassifier(),\n",
+    "    \"R_Neighour\" : RadiusNeighborsClassifier(),\n",
+    "    \"Extra_T\" : ExtraTreesClassifier(n_estimators=50),\n",
+    "    \"R_forest\" : RandomForestClassifier(n_estimators=50),\n",
+    "    \"XGB\" : xgb.XGBClassifier(tree_method='gpu_hist', gpu_id=0),\n",
     "    # \"Catboost\" : CatBoostClassifier()\n",
     "    }\n",
     "\n"
