test more model

--- a/Model_Test_tdcsfog.ipynb
+++ b/Model_Test_tdcsfog.ipynb
@@ -198,8 +198,8 @@
     "    # \"Ridge\" : RidgeClassifier(),              #poor result    \n",
     "    # \"MLP\" : MLPClassifier(),                  #poor result              \n",
     "    # \"R_Neighour\" : RadiusNeighborsClassifier(),\n",
-    "    # \"Extra_T\" : ExtraTreesClassifier(n_estimators=50),\n",
-    "    # \"R_forest\" : RandomForestClassifier(),\n",
+    "    \"Extra_T\" : ExtraTreesClassifier(n_estimators=50),\n",
+    "    \"R_forest\" : RandomForestClassifier(n_estimators=50),\n",
     "    \"XGB\" : xgb.XGBClassifier(tree_method='gpu_hist', gpu_id=0),\n",
     "    # \"Catboost\" : CatBoostClassifier()\n",
     "    }\n",
